force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AVA_SFCPQ__SalesTaxDetails__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__SalesTaxDetails__c</fullName>
    <description>AvaTax Sales Tax Details</description>
    <inlineHelpText>AvaTax Sales Tax Details</inlineHelpText>
    <label>Sales Tax Details (Deprecated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>