force-app/main/default/objects/SBQQ__QuoteLine__c/fields/blng__BillableUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>blng__BillableUnitPrice__c</fullName>
    <description>The unprorated amount that will bill each billing period. Equals ((TotalPrice * BillingFrequency) / (ProrateMultiplier * DefaultSubscriptionTerm)).</description>
    <formula>IF(ISPICKVAL(SBQQ__ChargeType__c , &#39;One-Time&#39;),  SBQQ__NetTotal__c,
        (SBQQ__NetTotal__c * (CASE(SBQQ__BillingFrequency__c,
        &quot;Monthly&quot;, 1,
        &quot;Quarterly&quot;, 3,
        &quot;Semiannual&quot;, 6,
        &quot;Annual&quot;, 12,
        0))) / ( SBQQ__ProrateMultiplier__c * SBQQ__DefaultSubscriptionTerm__c )
        )</formula>
    <inlineHelpText>The unprorated amount that will bill each billing period. Equals ((TotalPrice * BillingFrequency) / (ProrateMultiplier * DefaultSubscriptionTerm)).</inlineHelpText>
    <label>Billable Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>